# s3arc

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FSX_TAG_CONFIGURATION.md  README.md  ls-s3arc.py  pyproject.toml  reference.docx  requirements.txt  s3arc-project-v2.docx  s3arc-project-v2.md  s3arc-project.docx  s3arc-project.md  s3arc_common.py  s3archive.py  s3recall.py
cloudformation/: README.md  s3arc-test-stack.yaml
tests/: conftest.py  test_s3arc.py
